--- a/index.html
+++ b/index.html
@@ -1,28 +1,49 @@
 <!DOCTYPE html>
-<html lang="en-US">
-    <head>
+<!-- Coding By CodingNepal - www.codingnepalweb.com -->
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lexi's Website!</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    </head>
-    <body>
-     <header>
-        <div class="navbar">
-            <div class="logo"><a href="#">Lexi Pembroke Co.</a></div>
-            <ul class="links"> 
-                <li><a href="hero">Home!</a></li>
-                <li><a href="about">About Me!</a></li>
-                <li><a href="services">Things I Do!</a></li>
-                <li><a href="socials">Socials!</a></li>
-            </ul>
-            <a href="#" class="action_btn">Get Started</a>
-            <div class="toggle_btn">
-                <i class="fa-solid fa-bars"></i>
-            </div>
-        
-     </header>
-    </body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <nav class="navbar">
+        <h2 class="logo"><a href="#">Lexi Pembroke co</a></h2>
+        <input type="checkbox" id="menu-toggle" />
+        <label for="menu-toggle" id="hamburger-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+            <path d="M3 12h18M3 6h18M3 18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+        </label>
+        <ul class="links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Me</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact Me</a></li>
+        </ul>
+        <div class="buttons">
+          <a href="#" class="signin">Sign In</a>
+          <a href="#" class="signup">Sign Up</a>
+        </div>
+      </nav>
+    </header>
+    <section class="hero-section">
+      <div class="hero">
+        <h2>Hello there!</h2>
+        <p>
+          My name's Lexi, I'm 18 this year and I do computer science for a living. I love the colors pink and purple.
+        </p>
+        <div class="buttons">
+          <a href="/aboutme.html" class="join">More About Me!</a>
+          <a href="#" class="learn">Learn More</a>
+        </div>
+      </div>
+      <div class="img">
+        <img src="https://png.pngtree.com/png-clipart/20230324/ourmid/pngtree-an-island-with-a-synthwave-sunset-png-image_6666448.png" alt="Synthwave Logo" />
+      </div>
+    </section>
+  </body>
 </html>
