--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <link rel="stylesheet" href="style.css"/>
+        <link rel="stylesheet" href="about.css"/>
         <meta spellcheck="true">
         <meta lang="EN_US">
         <meta charset="UTF-8">
