--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,8 @@
         <meta lang="EN_US">
         <meta charset="UTF-8">
         <body>
-
-            
+           <h1
+            <p>welcome to my about me section</p>
+            <div class="hero"></div>
         </body>
     </head>
